# JuiceBox

./: .gitignore  CMakeLists.txt  README.md
include/IrrRecastDetour/: CStaticNavMesh.h  CTiledNavMesh.h  INavMesh.h
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Core.cpp  Core.h  ImGuiInputHandler.h  JuiceBoxEventListener.h  Model.cpp  Model.h  Types.h  Viewport.cpp  Viewport.h  main.cpp
src/editor/: Editor.cpp  Editor.h
src/helpers/: Mesh.h  Vertex.h  VertexSelector.h  WindowResolution.h
src/mode/: Vertex.cpp  Vertex.h
src/ui/: UITopBar.cpp  UITopBar.h
src/utility/: UVertex.h
